2001-12-03 Keith Walker <keith.walker@arm.com>
	* gdbserver/low-linux.c (arm_register_u_addr): added.
	(initialize_arch): added for ARM target.
	* config/arm/nm-linux.h (U_REGS_OFFSET) defined.
	(REGISTER_U_ADDR) defined.
	* config/arm/tm-linux.h (ARM_GNULINUX_TARGET) defined.

2001-12-04  Corinna Vinschen  <vinschen@redhat.com>

	* arm-tdep.c (arm_skip_prologue): Always skip prologue by scanning
	the prologue if source is assembler.

2001-12-04  Jackie Smith Cashion  <jsmith@redhat.com>

	* MAINTAINERS (write-after-approval): Add self.

	* d10v-tdep.c (d10v_gdbarch_init): Change size of long long to 8 bytes.
	
	From Andrew Cagney  <cagney@redhat.com>:
        * d10v-tdep.c (d10v_frame_chain_valid): Check if the caller's PC
        is in the entry function.
        (d10v_use_struct_convention): Store multi-field struct and union
        return values on the stack.
	
2001-12-04  Jim Blandy  <jimb@redhat.com>

	* s390-tdep.c (s390_get_frame_info): Recognize spills of reg
	arguments into their stack slots.

	* s390-tdep.c (s390_get_frame_info): More doc fixes.

	* s390-tdep.c (s390_get_frame_info): Doc fixes.

2001-12-04  Orjan Friberg  <orjanf@axis.com>

	* cris-tdep.c (cris_regnums): Add DCCR_REGNUM for completeness.
	(cris_examine): Add comment about solib prologue parsing.
	(bdap_prefix): Read offset with correct signedness and size.
	(move_to_preg_op): Don't rely on register numbering for register size.
	(none_reg_mode_move_from_preg_op): Ditto.

2001-12-04  Orjan Friberg  <orjanf@axis.com>

	* solib.c (solib_open): Make path relative if search for absolute path
	failed.  If search for relative path in solib_search_path failed, fall
	back to search for basename only.

2001-12-03  Martin M. Hunt  <hunt@redhat.com>

	* serial.h: Add a note to serial_open.

	* ser-tcp.c (tcp_open): Rewrite to use a non-blocking connect.
	Allow UI and CLI to abort connect.  Instead of trying 15 times
	with very long timeouts, just try one connect with a maximum timeout